delete sub component mappings
