# internal/app/controller/http/v1/apiV1ItemBatch.go
@@ -185,7 +185,7 @@ func (v1 httpV1Implem) AddSubItems(w http.ResponseWriter, r *http.Request) {
 		children = append(children, child)
 	}
 
-	addedChildren, err := v1.itemToItemUseCase.CreateAll(r.Context(), domain.ItemToItem{}, domainUser.UUID, parentUUID, children)
+	addedChildren, err := v1.itemToItemUseCase.CreateAll(r.Context(), domainUser.UUID, parentUUID, children)
 
 	if err != nil {
 		respondWithError(w, r, fmt.Sprintf("unable to add all child itemBatches: %v", err), http.StatusBadRequest)
@@ -194,4 +194,48 @@ func (v1 httpV1Implem) AddSubItems(w http.ResponseWriter, r *http.Request) {
 
 	respondWithJson(w, r, http.StatusCreated, addedChildren)
 
+}
+
+func (v1 httpV1Implem) DeleteSubItems(w http.ResponseWriter, r *http.Request) {
+	var requestBody DeleteSubItemsJSONRequestBody
+
+	err := json.NewDecoder(r.Body).Decode(&requestBody)
+	if err != nil {
+		respondWithError(w, r, "invalid request json object found", http.StatusBadRequest)
+		return
+	}
+
+	domainUser, err := v1.loadDomainUser(r)
+
+	if err != nil {
+		respondWithError(w, r, fmt.Sprintf("unable to load user: %v", err), http.StatusBadRequest)
+		return
+	}
+
+	parentUUID, err := uuid.Parse(requestBody.ParentUUID)
+
+	if err != nil {
+		respondWithError(w, r, fmt.Sprintf("unable to parse parent UUID: %v", err), http.StatusBadRequest)
+		return
+	}
+
+	var children []uuid.UUID
+
+	for _, c := range requestBody.ChildrenUUIDs {
+		child, err := uuid.Parse(c.UUID)
+		if err != nil {
+			respondWithError(w, r, fmt.Sprintf("unable to parse child UUID: %v", err), http.StatusBadRequest)
+			return
+		}
+		children = append(children, child)
+	}
+
+	deletedChildren, err := v1.itemToItemUseCase.DeleteAll(r.Context(), domainUser.UUID, parentUUID, children)
+
+	if err != nil {
+		respondWithError(w, r, fmt.Sprintf("unable to remove all child itemBatch mappings: %v", err), http.StatusBadRequest)
+		return
+	}
+
+	respondWithJson(w, r, http.StatusOK, fmt.Sprintf("Removed %v child itemBatch mappings", deletedChildren))
 }
