# internal/app/controller/http/v1/openapi.yml
@@ -20,6 +20,8 @@ tags:
     description: itemBatch
   - name: certification
     description: certification
+  - name: itemBatchToItemBatch
+    description: itemBatchToItemBatch
    
 #     externalDocs:
 #       description: Find out more
@@ -347,10 +349,9 @@ paths:
   /itembatch/children:
     # get: do this by adding query param to itembatch GET?
     # put: no need for this
-    # delete:
     post:
       tags:
-        - itembatch
+        - itemBatchToItemBatch
       summary: Create subcomponent mapping
       description: Adds given items as children of the given parent
       operationId: addSubItems
@@ -393,6 +394,52 @@ paths:
           $ref: '#/components/responses/DefaultUnauthorizedErrorResponse'
         default:
           $ref: '#/components/responses/DefaultErrorResponse'
+    delete:
+      tags:
+        - itemBatchToItemBatch
+      summary: Delete children from the given parent item
+      description: remove the mappings from a parent item to child items
+      operationId: deleteSubItems
+      requestBody:
+        description: sub item batchs to delete
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - parentUUID
+                - childrenUUIDs
+              properties:
+                parentUUID: 
+                  type: string
+                childrenUUIDs:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                     - UUID
+                    properties:
+                      UUID:
+                        type: string
+      responses:
+        "200":
+          description: ItemToItem deleted
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ItemToItem"
+        "400":
+          $ref: '#/components/responses/DefaultErrorResponse'
+        "401":
+          $ref: '#/components/responses/DefaultUnauthenticatedErrorResponse'
+        "403":
+          $ref: '#/components/responses/DefaultUnauthorizedErrorResponse'
+        default:
+          $ref: '#/components/responses/DefaultErrorResponse'
+
   /certification:
     get:
       tags:
